@@ -1,3 +1,8 @@
+2002-03-15  Ganesan Sethuraman <ganesan.sethuraman@wipro.com>
+
+       * log_repaint.c: Fixed the display of the status bar when the
+       last log file is closed.Fix for bug #74610
+
 2002-03-18  Kevin Vandersloot <kfv101@psu.edu> 
 
 	* logview.c: fix checks for logfiles. Thanks to Aruna Pourohit
